Fixed #2139 - Overlay components are not aligned correctly

--- a/src/components/autocomplete/AutoComplete.css
+++ b/src/components/autocomplete/AutoComplete.css
@@ -31,6 +31,8 @@
 
 .p-autocomplete-panel {
     position: absolute;
+    top: 0;
+    left: 0;
     overflow: auto;
 }
 
